added tf2 theme

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,10 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: sans-serif;
+      background: url(https://giantbomb1.cbsistatic.com/uploads/original/1/10392/1197513-hl2_2009_11_24_08_13_41_70.jpg)
+        center;
+      background-size: cover;
+      min-height: 100vh;
     "
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
